[package]
name = "bevy-ui-debug-overlay"
version = "0.2.0"
edition = "2021"
keywords = ["bevy", "ui", "debug"]
license = "MIT OR Apache-2.0"
description = "Debug overlay for Bevy UI."
categories = ["game-development", "gui", "development-tools"]
authors = ["David Curthoys <david.curthoys@gmail.com>"]
repository = "https://github.com/ickshonpe/bevy-ui-debug-overlay"
homepage = "https://github.com/ickshonpe/bevy-ui-debug-overlay"
documentation = "https://docs.rs/bevy-ui-debug-overlay"
readme = "README.md"

[features]
default = ["bevy_reflect"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]

[dependencies]
bevy_app = { version = "0.16", default-features = false }
bevy_asset = { version = "0.16", default-features = false }
bevy_color = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_math = { version = "0.16", default-features = false }
bevy_reflect = { version = "0.16", optional = true, default-features = false }
bevy_render = { version = "0.16", default-features = false }
bevy_sprite = { version = "0.16", default-features = false }
bevy_transform = { version = "0.16", default-features = false }
bevy_ui = { version = "0.16", default-features = false }

[dev-dependencies]
bevy = "0.16.0"
